--- a/hosts.ini
+++ b/hosts.ini
@@ -1,3 +1,2 @@
 [ec2_servers]
-master1_linux ansible_host=52.55.245.215
-standby1_linux ansible_host=44.212.32.61
+master1_linux ansible_host=52.55.245.215 ansible_user=ec2-user ansible_ssh_private_key_file=/home/temur/devops/test_aws.pem ansible_port=3022
