--- a/hosts.ini
+++ b/hosts.ini
@@ -1,2 +1,7 @@
 [ec2_servers]
-master1_linux ansible_host=52.55.245.215 ansible_user=ec2-user ansible_ssh_private_key_file=/home/temur/devops/test_aws.pem ansible_port=3022
+master1_linux ansible_host=52.70.42.105
+
+[ec2_servers:vars]
+ansible_user=ec2-user
+ansible_ssh_private_key_file=/home/temur/devops/test_aws.pem
+ansible_port=3022
