--- a/hosts.ini
+++ b/hosts.ini
@@ -1,7 +1,7 @@
 [ec2_servers]
-master1_linux ansible_host=52.70.42.105
+master1_linux ansible_host=52.70.42.105 # Enter your public IP
 
 [ec2_servers:vars]
-ansible_user=ec2-user
-ansible_ssh_private_key_file=/home/temur/devops/test_aws.pem
-ansible_port=3022
+ansible_user=ec2-user # Enter your username
+ansible_ssh_private_key_file=/home/temur/devops/test_aws.pem # Enter the path to your ssh pk
+#ansible_port=3022 #specify custom port (22 by default) 
